force-app/main/default/objects/DUMMY_ORDER_SOOJUNG__c/DUMMY_ORDER_SOOJUNG__c.object-meta.xml
<CustomObject>
    <label>DUMMY ORDER SOOJUNG</label>
    <nameField>
        <label>DUMMY DATA SOOJUNG</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DUMMY ORDER SOOJUNG</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>