force-app/main/default/objects/DUMMY_ORDER_SOOJUNG__c/fields/Batch_Flag__c.field-meta.xml
<CustomField>
    <fullName>Batch_Flag__c</fullName>
    <externalId>true</externalId>
    <label>Batch Flag</label>
    <length>30</length>
    <type>Text</type>
</CustomField>