force-app/main/default/objects/DUMMY_ORDER_SOOJUNG__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Cost</label>
    <length>30</length>
    <type>Text</type>
</CustomField>