force-app/main/default/objects/DUMMY_ORDER_SOOJUNG__c/fields/Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Order_Date__c</fullName>
    <label>Order Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>